Add basic styling to page

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,3 +1,9 @@
+#searchForm {
+  gap: 1rem;
+}
+.navbar {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+}
 #moviesTable tr:hover {
   cursor: pointer;
 }
