--- a/client/css/main.css
+++ b/client/css/main.css
@@ -4,6 +4,10 @@
 .navbar {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
+#moviesTable {
+  margin-top: 1.5rem;
+}
+
 #moviesTable tr:hover {
   cursor: pointer;
 }
